--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="logo1" src="/cloud-computing.png" alt="">
+        <img class="logo1" src="cloud-computing.png" alt="">
         <h1 class="logo">
             PP<span>PixelPalace</span>
         </h1>
@@ -67,7 +67,7 @@
             <div class="tela">
                 <ul class="criptos">
                     <a class="moeda" href=""><li class="subcriptos">
-                        <img src="/team.png" alt="" class="imagem">
+                        <img src="team.png" alt="" class="imagem">
                         <p class="titulo2">Gestão</p>
                         <p class="paragrafo">Ferramenta importante para empresas de todos os tamanhos que buscam gerenciar 
                             e automatizar seus processos de negócios. Esses softwares são projetados para ajudar a melhorar 
@@ -76,7 +76,7 @@
                         </p>
                     </li></a>
                     <a class="moeda" href=""><li class="subcriptos">
-                        <img src="/bate-papo-online.png" alt="" class="imagem">
+                        <img src="bate-papo-online.png" alt="" class="imagem">
                         <p class="titulo2">Atendimento</p>
                         <p class="paragrafo">Ferramenta que permite às empresas gerenciar e melhorar o atendimento aos 
                             seus clientes. Com um software de atendimento, é possível automatizar processos de suporte, gerenciar 
@@ -85,7 +85,7 @@
                         </p>
                     </li></a>
                     <a class="moeda" href=""><li class="subcriptos">
-                        <img src="/go.png" alt="" class="imagem">
+                        <img src="go.png" alt="" class="imagem">
                         <p class="titulo2">Molde a sua solução</p>
                         <p class="paragrafo">Processo que envolve a identificação de necessidades específicas 
                             do negócio e o desenvolvimento de soluções personalizadas para atendê-las. 
